Doc/force-app/main/default/objects/Project_Snapshot__c/Project_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Project Snapshot</label>
    <nameField>
        <label>Project Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>