Doc/force-app/main/default/objects/Project_Snapshot__c/fields/Bookings__c.field-meta.xml
<CustomField>
    <fullName>Bookings__c</fullName>
    <label>Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>