Doc/force-app/main/default/objects/Project_Snapshot__c/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <label>Project Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>