Doc/force-app/main/default/objects/Project_Snapshot__c/fields/Total_Assigned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Assigned_Hours__c</fullName>
    <label>Total Assigned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>